Scale logo lockup & minimize margin on badge to avoid overlap.

--- a/sass/site2_sd_rules.scss
+++ b/sass/site2_sd_rules.scss
@@ -33,6 +33,6 @@ body /deep/ component-download-button::shadow paper-button[raised] {
 @media only screen and (max-width: $break-small)  {
 
   #welcome /deep/ app-bar::shadow .polymer-status-badge {
-     display: none;
+     margin: 0;
   }
 }
